tests/NormalTests/paczka1/small_fuzzy/49248006.err
Error in line 4: geV9 S944 37,6
Error in line 1: DeO S778 88,9
